# SSOT-manager

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  draft.md
.github/workflows/: ci-release.yml
Skills/ssot-manager-config/: SKILL.md
Skills/ssot-manager-config/agents/: openai.yaml
Skills/ssot-manager-config/references/: assets-first-expander.md  config-schema.md  patterns.md
Skills/ssot-manager-config/scripts/: expand_asset_dir.py
examples/: personal-harness-management.yaml  sync-prompts.yaml
openspec/changes/add-rule-ignore-globs/: design.md  proposal.md
openspec/changes/clarify-tui-scroll-and-focus-semantics/: tasks.md
openspec/specs/managed-state-and-doctor/: spec.md
openspec/specs/profile-config-editing/: spec.md
openspec/specs/profile-config-resolution/: spec.md
openspec/specs/profile-inspection-cli/: spec.md
openspec/specs/prompt-compiler-cli/: spec.md
openspec/specs/prompt-composition/: spec.md
openspec/specs/sync-reconciliation/: spec.md
openspec/specs/terminal-ui-shell/: spec.md
scripts/: install.sh
src/: cli.rs  config.rs  inspection.rs  lib.rs  main.rs  paths.rs  prompt.rs  reconcile.rs  state.rs  tui.rs
src/tui/: input.rs  mod.rs  render.rs  state.rs  tests.rs
tests/: config_cli.rs  flows.rs  help_cli.rs  inspection_cli.rs  prompt_cli.rs
tests/fixtures/: composition-output-outside-root.yaml  composition-valid.yaml  disabled-rule.yaml  flow-config.yaml  inspection.yaml  invalid-ignore.yaml  profile-source-root.yaml  supported-modes.yaml  unknown-required-composition.yaml  unsupported-mode.yaml  valid.yaml
(+56 files in other folders)
